syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.example.proto.title";

package com.example.title;

service TitleHandler {
  rpc createTitle(CreateTitleRequest) returns (TitleResponse);
  rpc getTitle(TitleIdRequest) returns (TitleResponse);
  rpc getTitleByTitleGroupId(TitleGroupIdRequest) returns (TitleListResponse);
}

message TitleIdRequest {
  int32 id = 1;
}

message TitleGroupIdRequest {
  int32 id = 1;
}

message CreateTitleRequest {
  int32 titleGroupId = 1;
  string subject = 2;
  google.protobuf.StringValue description = 3;
  int32 createdBy = 4;
}

message TitleResponse {
  int32 id = 1;
  int32 titleGroupId = 2;
  string subject = 3;
  google.protobuf.StringValue description = 4;
  int32 createdBy = 5;
  google.protobuf.Int32Value modifiedBy = 6;
  google.protobuf.Timestamp createdDate = 7;
  google.protobuf.Timestamp modifiedDate = 8;
}

message TitleListResponse {
  repeated TitleResponse title = 1;
}